# cross_os_assert

./: CMakeLists.txt  README.md  main.cpp
pytorch_header_file/: Export.h  Macros.h  cmake_macros.h
